# final_project

./: README.md
imu_pkg/: CMakeLists.txt  package.xml
imu_pkg/src/: imu_filter.cpp
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: ekf.yaml
my_robot_bringup/launch/: detection.launch.py  robot.launch.py
my_robot_simulation/: CMakeLists.txt  package.xml
object_detection/: package.xml  setup.py
object_detection/object_detection/: detect_corners.py  hole_detection_node.py  mapping_node.py  slime_detection.py  transformation_node.py
object_detection/object_detection/deep_learning_laser_det/: collect_laser_data.py  detection_webcam.py  laser_model.py
object_detection/object_detection/laser_detection/: find_hsv.py  laser_detection_segments.py  line_detection.py  util.py
obstacle_avoidance/: setup.py
obstacle_avoidance/obstacle_avoidance/: teleop_gui.py  voice_control.py
